# Genomics_Database

./: .gitignore  Makefile  README.md  genomics_system.py  pyproject.toml  requirements-lock.txt  requirements.txt  test_data.py  version_check.py
.github/workflows/: ci.yml
