[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomics-database"
version = "0.1.0"
description = "CLI tooling for cancer genomics data loading and mutation reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "seaborn",
  "flask",
]

[project.scripts]
genomics-db = "genomics_system:main"

[tool.pytest.ini_options]
testpaths = ["test_data.py"]
